[gd_scene load_steps=9 format=3 uid="uid://doi7efayw5psr"]

[ext_resource type="Script" path="res://scenes/creeps/path_follower.gd" id="1_bkf8f"]
[ext_resource type="Texture2D" uid="uid://bs5c1dj3qw22l" path="res://assets/images/creeps/Ash 50.png" id="2_we0xi"]
[ext_resource type="Texture2D" uid="uid://by4x6nnilrqu3" path="res://assets/ui/white square.png" id="3_jhkba"]
[ext_resource type="AudioStream" uid="uid://bbs5v8c14u6mt" path="res://assets/audio/effects/sakura.wav" id="4_j2q0m"]
[ext_resource type="Texture2D" uid="uid://biiegmp87oqnm" path="res://assets/images/status_effects/snowflake frame.png" id="5_7nvx5"]
[ext_resource type="Texture2D" uid="uid://c1o11eyvaqr3q" path="res://assets/images/status_effects/stun frame.png" id="6_co67e"]
[ext_resource type="Texture2D" uid="uid://rse63ldwlbmo" path="res://assets/images/status_effects/poison face frame.png" id="6_n2qao"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4r2fe"]
radius = 25.0

[node name="PathFollower" type="CharacterBody2D"]
collision_layer = 2
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_bkf8f")
max_speed = 75.0
max_health = 6500

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("2_we0xi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_4r2fe")

[node name="HealthBar" type="TextureProgressBar" parent="."]
unique_name_in_owner = true
offset_left = -25.0
offset_top = -40.0
offset_right = 25.0
offset_bottom = -30.0
value = 50.0
nine_patch_stretch = true
texture_progress = ExtResource("3_jhkba")
tint_progress = Color(0, 1, 0, 1)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_j2q0m")

[node name="EffectsPollingTimer" type="Timer" parent="."]
unique_name_in_owner = true
process_callback = 0
wait_time = 0.1
autostart = true

[node name="StatusIconContainer" type="HBoxContainer" parent="."]
unique_name_in_owner = true
offset_left = -25.0
offset_top = -51.0
offset_right = 25.0
offset_bottom = -41.0
theme_override_constants/separation = 2

[node name="SlowIcon" type="TextureRect" parent="StatusIconContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("5_7nvx5")

[node name="StunIcon" type="TextureRect" parent="StatusIconContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("6_co67e")

[node name="PoisonIcon" type="TextureRect" parent="StatusIconContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("6_n2qao")
